--- a/index.html
+++ b/index.html
@@ -38,18 +38,19 @@
   </div>
   
   <div id="debug">
+   
    <div class="top-clue" >
     <p class="visual-top">
      lastOp:
      <span id="last-op-debug"></span>
-    </p>
     <p class="visual-top">
      LCD: 
      <span id="lcd-debug"></span>
     </p>
-   </div>
- 
+   </div>  
+    
    <div class="top-clue" >
+    
     <p class="visual-top">
      inputBuffer: 
      <span id="inpBufferDebug"></span>
@@ -59,28 +60,36 @@
      <span id="mainAccDebug"></span>
     </p>
    </div>
-  
-   <p class="visual-clue">
+ 
+   <div class="top-clue" >
+    <p class="visual-top">
     sumAcc: <span id="sumAccDebug"></span>
    </p>
-
-   <p class="visual-clue">
+   <p class="visual-top">
     minusAcc: <span id="minusAccDebug"></span>
    </p>
- 
-   <p class="visual-clue">
+   </div>
+  
+  
+   <div class="top-clue" >
+   <p class="visual-top">
     multAcc: <span id="multAccDebug"></span>
    </p>
- 
-   <p class="visual-clue">
+   <p class="visual-top">
     divAcc: <span id="divAccDebug"></span>
    </p>
-
-  <p class="visual-clue">
-   percentAcc: <span id="prcntAccDebug"></span>
-  </p>
+   </div>
+ 
+   <div class="top-clue" >
+   <p class="visual-top">
+    percentAcc: <span id="prcntAccDebug"></span>
+   <p class="visual-top">
+    dotAcc: <span id="dotAccDebug"></span>
+   </p>
+   </div>
 
   </div>
+  
 <div id= "notification-area">
   <span id= "notification"></span>
 </div>
@@ -89,3 +98,4 @@
   <script type="text/javascript" charset="utf-8" src="calc.js"></script>
 </body>
 </html>
+
