--- a/index.html
+++ b/index.html
@@ -93,9 +93,8 @@
 <div id= "notification-area">
   <span id= "notification"></span>
 </div>
-<input type="button" name="debug" id="test" value="TEST" />
+<input type="button" name="debug" id="test" value="&#x267d;" />
 
   <script type="text/javascript" charset="utf-8" src="calc.js"></script>
 </body>
 </html>
-
