--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 <div id= "notification-area">
   <span id= "notification"></span>
 </div>
-<input type="button" name="debug" id="test" value="&#x267d;" />
+<input type="button" name="debug" id="test" value="&#x267d; TEST" />
 
   <script type="text/javascript" charset="utf-8" src="calc.js"></script>
 </body>
