--- a/index.html
+++ b/index.html
@@ -115,6 +115,6 @@
 <input type="button" name="debug2" id="test2" value="1/x" />
 <input type="button" name="debug2" id="test3" value="x²" />
 
-  <script type="text/javascript" charset="utf-8" src="newCalc.js"></script>
+  <script type="text/javascript" charset="utf-8" src="calc.js"></script>
 </body>
 </html>
